[package]
name = "kmer_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
multiminimizers = { git = "https://github.com/lrobidou/multiminimizers", rev = "5bf570ce8de15c8716603d8f609f73e8fbe1a167" }
ahash = "0.8"
parking_lot = "0.12"
rayon = "1.10"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
num-format = "0.4"
zstd = "0.13"
num_cpus = "1.16"
flate2 = "1.0"

[profile.dev]
opt-level = 2
debug = 1
lto = "thin"
codegen-units = 4
incremental = true

[profile.release]
opt-level = 3
debug = 0
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
